SERVER-21103 Top chunk optimization is not being triggered when there is no balancer settings document